<resources>
    <string name="button_open_faq">Open FAQ (frequently asked questions)</string>
    <string name="channel_battery_info" translatable="false">batteryInfo</string>
    <string name="channel_description_battery_info">The permanent notification with the battery info (temperature, voltage, …).</string>
    <string name="channel_description_other_warnings">Other important warnings, for example if the app has no root access anymore.</string>
    <string name="channel_description_temp_warning_high">The high battery temperature warning.</string>
    <string name="channel_description_temp_warning_low">The low battery temperature warning.</string>
    <string name="channel_description_warning_high">The \'Battery level is above x%\' warning.</string>
    <string name="channel_description_warning_low">The \'Battery level is below x%\' warning.</string>
    <string name="channel_other_warnings" translatable="false">otherWarnings</string>
    <string name="channel_temp_warning_high" translatable="false">tempWarningHigh</string>
    <string name="channel_temp_warning_low" translatable="false">tempWarningLow</string>
    <string name="channel_title_battery_info">Battery Information</string>
    <string name="channel_title_other_warnings">Other Warnings</string>
    <string name="channel_title_temp_warning_high">High temperature warning</string>
    <string name="channel_title_temp_warning_low">Low temperature warning</string>
    <string name="channel_title_warning_high">High battery warning</string>
    <string name="channel_title_warning_low">Low battery warning</string>
    <string name="channel_warning_high" translatable="false">warningHigh</string>
    <string name="channel_warning_low" translatable="false">warningLow</string>
    <string name="charging">Charging</string>
    <string name="checkbox_battery_level">Battery level (%)</string>
    <string name="checkbox_temperature_celsius">Temperature (°C)</string>
    <string name="checkbox_temperature_fahrenheit">Temperature (°F)</string>
    <string name="developer_mail" translatable="false">kontakt@norman-laudien.de</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_message_delete_all_graphs">Do you really want to delete ALL graphs?</string>
    <string name="dialog_message_delete_graph">Do you really want to delete that graph?</string>
    <string name="dialog_message_send_debug_info">Do you want to send debug information with your mail? This can be very helpful, if you want to report a bug.</string>
    <string name="dialog_title_are_you_sure">Are you sure?</string>
    <string name="dialog_title_graph_info">Graph information</string>
    <string name="dialog_title_information">Information</string>
    <string name="health_cold">Cold</string>
    <string name="health_dead">Dead</string>
    <string name="health_good">Good</string>
    <string name="health_overheat">Overheat</string>
    <string name="health_overvoltage">Overvoltage</string>
    <string name="health_unknown">Unknown</string>
    <string name="health_unspecified_failure">Unspecified failure</string>
    <string name="info_battery_level">Battery level</string>
    <string name="info_charging_speed">Charging speed</string>
    <string name="info_charging_time">Charging time</string>
    <string name="info_current">Current</string>
    <string name="info_endTime">Finished</string>
    <string name="info_health">Health</string>
    <string name="info_max_current">Max. current</string>
    <string name="info_max_temp">Max. temperature</string>
    <string name="info_max_voltage">Max. voltage</string>
    <string name="info_min_current">Min. current</string>
    <string name="info_min_temp">Min. temperature</string>
    <string name="info_min_voltage">Min. voltage</string>
    <string name="info_startTime">Start</string>
    <string name="info_technology">Technology</string>
    <string name="info_temperature">Temperature</string>
    <string name="info_voltage">Voltage</string>
    <string name="intro_advanced_mode">Advanced mode</string>
    <string name="intro_advanced_mode_description">The advanced mode makes root settings and more available - everything the app has to offer.</string>
    <string name="intro_easy_mode">Easy mode</string>
    <string name="intro_easy_mode_description">The easy mode is recommended for most users. Only the most important settings are available.</string>
    <string name="intro_easy_mode_title">Select mode</string>
    <string name="intro_finish_toast">Let\'s make your battery last longer!</string>
    <string name="intro_slide_1_description">It will help your battery to live longer!</string>
    <string name="intro_slide_1_title">Welcome to Battery Warner!</string>
    <string name="intro_slide_2_description" formatted="false">Manufacturers say that your battery has a longer life, if you do not let the battery too long at 100% or reach 0%!</string>
    <string name="intro_slide_2_title">How does it do that?</string>
    <string name="intro_slide_3_description" formatted="false">That means keeping the battery level for example between 20–80% instead of 0–100%!</string>
    <string name="intro_slide_3_title">For the longest life, you have to charge \"flat\"!</string>
    <string name="intro_slide_prefs_description">Choose your settings right here!</string>
    <string name="intro_slide_prefs_title">Let\'s get started!</string>
    <string name="link_donation" translatable="false">https://www.paypal.me/p1xelfehler</string>
    <string name="link_faq">http://norman-laudien.de/batterie-warner-faq-en/</string>
    <string name="link_xda_thread" translatable="false">https://forum.xda-developers.com/android/apps-games/app-battery-warner-t3560920</string>
    <string name="menu_contact_developer">Contact the developer</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_faq">FAQ (frequently asked questions)</string>
    <string name="menu_open_history">Open history</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_rename_graph">Rename graph</string>
    <string name="menu_save_to_history">Save to history</string>
    <string name="menu_sent_file_to_developer">Send file to developer</string>
    <string name="menu_xda_thread">XDA Thread</string>
    <string name="notification_button_enable_charging">Enable charging</string>
    <string name="notification_button_enable_usb_charging">Enable usb charging</string>
    <string name="notification_button_grant_root">Grant root</string>
    <string name="notification_button_toggle_power_saving">Toggle power saving mode</string>
    <string name="notification_charging_disabled">Charging has been disabled by the app. Click here to enable it again. This will not force enable charging and is intended to be used after the cable has been disconnected!</string>
    <string name="notification_grant_root">The app was updated. Please click here to grant root access again!</string>
    <string name="notification_no_items_enabled">No items enabled!</string>
    <string name="pref_dark_theme_enabled" translatable="false">darkThemeEnabled</string>
    <string name="pref_graph_autosave" translatable="false">graphAutoSave</string>
    <string name="pref_graph_enabled" translatable="false">graphEnabled</string>
    <string name="pref_info_notification_enabled" translatable="false">infoNotificationEnabled</string>
    <string name="pref_info_notification_items" translatable="false">infoNotificationItems</string>
    <string name="pref_repeat_warning" translatable="false">repeatWarning</string>
    <string name="pref_smart_charging_enabled" translatable="false">smartChargingEnabled</string>
    <string name="pref_smart_charging_limit" translatable="false">smartChargingPercentMax</string>
    <string name="pref_smart_charging_time" translatable="false">smartChargingTime</string>
    <string name="pref_sound_uri_high" translatable="false">savedSoundUriHigh</string>
    <string name="pref_sound_uri_low" translatable="false">savedSoundUriLow</string>
    <string name="pref_stats" translatable="false">stats</string>
    <string name="pref_stop_charging_auto_pick" translatable="false">stopChargingAutoPick</string>
    <string name="pref_stop_charging_disable_charging_text" translatable="false">stopChargingDisableChargingText</string>
    <string name="pref_stop_charging_disable_charging_text_default" translatable="false">0</string>
    <string name="pref_stop_charging_enable_charging_text" translatable="false">stopChargingEnableChargingText</string>
    <string name="pref_stop_charging_enable_charging_text_default" translatable="false">1</string>
    <string name="pref_stop_charging_file" translatable="false">stopChargingFile</string>
    <string name="pref_temp_unit" translatable="false">temperatureUnit</string>
    <string name="pref_temp_unit_default" translatable="false">0</string>
    <string name="pref_warning_high" translatable="false">warningHigh</string>
    <string name="pref_warning_high_enabled" translatable="false">warningHighEnabled</string>
    <string name="pref_warning_high_sound_enabled" translatable="false">warningHighSoundEnabled</string>
    <string name="pref_warning_low" translatable="false">warningLow</string>
    <string name="pref_warning_low_enabled" translatable="false">warningLowEnabled</string>
    <string name="pref_warning_low_sound_enabled" translatable="false">warningLowSoundEnabled</string>
    <string name="summary_graph_autosave">Save the recorded graph automatically to the history when the device is fully charged or you unplug the charger.</string>
    <string name="summary_graph_enabled">Record a graph while charging.</string>
    <string name="summary_repeat_warning">Repeat the warning roughly every minute.</string>
    <string name="summary_stop_charging_auto_pick">Automatically pick the correct file</string>
    <string name="summary_warning_high_enabled">Show a high battery warning when the set percentage is reached.</string>
    <string name="summary_warning_low_enabled">Show a low battery warning when the set percentage is reached.</string>
    <string name="title_charging_notification">Enable charging notification</string>
    <string name="title_dark_theme_enabled">Enable Dark Theme</string>
    <string name="title_discharging_notification">Enable discharging notification</string>
    <string name="title_graph_autosave">Save automatically</string>
    <string name="title_graph_enabled">Enable charging graph</string>
    <string name="title_info_notification_enabled">Enable info notification</string>
    <string name="title_info_notification_items">Shown in info notification</string>
    <string name="title_notification_settings">Notification settings</string>
    <string name="title_repeat_warning">Repeat the warning</string>
    <string name="title_sound_uri">Choose notification Sound</string>
    <string name="title_stats">Stats</string>
    <string name="title_stop_charging_auto_pick">Auto Pick</string>
    <string name="title_stop_charging_disable_charging_text">Text to disable charging</string>
    <string name="title_stop_charging_enable_charging_text">Text to enable charging</string>
    <string name="title_stop_charging_file">Pick Stop charging file</string>
    <string name="title_temp_unit">Temperature unit</string>
    <string name="title_theming">Theming</string>
    <string name="title_warning_high">High battery warning</string>
    <string name="title_warning_low">Low battery warning</string>
    <string name="title_warning_percentage">Warning percentage:</string>
    <string name="title_warning_sound_enabled">Enable notification sound</string>
</resources>