<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/title_warning_high">
        <CheckBoxPreference
            android:defaultValue="@bool/pref_warning_high_enabled_default"
            android:key="@string/pref_warning_high_enabled"
            android:summary="@string/summary_warning_high_enabled"
            android:title="@string/title_charging_notification" />
        <CheckBoxPreference
            android:defaultValue="@bool/pref_waring_high_sound_enabled_default"
            android:dependency="@string/pref_warning_high_enabled"
            android:key="@string/pref_warning_high_sound_enabled"
            android:title="@string/title_warning_sound_enabled" />
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="@string/pref_warning_high_sound_enabled"
            android:key="@string/pref_sound_uri_high"
            android:ringtoneType="notification"
            android:showSilent="false"
            android:title="@string/title_sound_uri" />
        <com.laudien.p1xelfehler.batterywarner.preferences.SeekBarPreference
            android:defaultValue="@integer/pref_warning_high_default"
            android:dependency="@string/pref_warning_high_enabled"
            android:key="@string/pref_warning_high"
            android:title="@string/title_warning_percentage"
            app:slider_max="@integer/pref_warning_high_max"
            app:slider_min="@integer/pref_warning_high_min"
            app:unit="%" />
        <CheckBoxPreference
            android:defaultValue="@bool/pref_repeat_warning_default"
            android:dependency="@string/pref_warning_high_enabled"
            android:key="@string/pref_repeat_warning"
            android:summary="@string/summary_repeat_warning"
            android:title="@string/title_repeat_warning" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_warning_low">
        <CheckBoxPreference
            android:defaultValue="@bool/pref_warning_low_enabled_default"
            android:key="@string/pref_warning_low_enabled"
            android:summary="@string/summary_warning_low_enabled"
            android:title="@string/title_discharging_notification" />
        <CheckBoxPreference
            android:defaultValue="@bool/pref_waring_low_sound_enabled_default"
            android:dependency="@string/pref_warning_low_enabled"
            android:key="@string/pref_warning_low_sound_enabled"
            android:title="@string/title_warning_sound_enabled" />
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="@string/pref_warning_low_sound_enabled"
            android:key="@string/pref_sound_uri_low"
            android:ringtoneType="notification"
            android:showSilent="false"
            android:title="@string/title_sound_uri" />
        <com.laudien.p1xelfehler.batterywarner.preferences.SeekBarPreference
            android:defaultValue="@integer/pref_warning_low_default"
            android:dependency="@string/pref_warning_low_enabled"
            android:key="@string/pref_warning_low"
            android:title="@string/title_warning_percentage"
            app:slider_max="@integer/pref_warning_low_max"
            app:slider_min="@integer/pref_warning_low_min"
            app:unit="%" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_notification_settings">
        <CheckBoxPreference
            android:defaultValue="@bool/pref_info_notification_enabled_default"
            android:key="@string/pref_info_notification_enabled"
            android:title="@string/title_info_notification_enabled" />
        <Preference
            android:dependency="@string/pref_info_notification_enabled"
            android:key="@string/pref_info_notification_items"
            android:title="@string/title_info_notification_items">
            <intent android:action="com.laudien.p1xelfehler.batterywarner.Activities.InfoNotificationActivity" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_stats"
        android:title="@string/title_stats">
        <ListPreference
            android:defaultValue="@string/pref_temp_unit_default"
            android:entries="@array/tempUnits"
            android:entryValues="@array/tempUnits_values"
            android:key="@string/pref_temp_unit"
            android:summary="%s"
            android:title="@string/title_temp_unit" />
        <CheckBoxPreference
            android:defaultValue="@bool/pref_graph_enabled_default"
            android:key="@string/pref_graph_enabled"
            android:summary="@string/summary_graph_enabled"
            android:title="@string/title_graph_enabled" />
        <CheckBoxPreference
            android:defaultValue="@bool/pref_graph_autosave_default"
            android:dependency="@string/pref_graph_enabled"
            android:key="@string/pref_graph_autosave"
            android:summary="@string/summary_graph_autosave"
            android:title="@string/title_graph_autosave" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_theming">
        <CheckBoxPreference
            android:defaultValue="@bool/pref_dark_theme_enabled_default"
            android:key="@string/pref_dark_theme_enabled"
            android:title="@string/title_dark_theme_enabled" />
    </PreferenceCategory>
</PreferenceScreen>