<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/dialog_title_graph_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_rename"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/menu_rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/menu_delete_all"
        app:showAsAction="never" />
</menu>