<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:defaultValue="@bool/pref_smart_charging_enabled_default"
        android:key="@string/pref_smart_charging_enabled"
        android:title="Smart Charging Enabled" />
    <com.laudien.p1xelfehler.batterywarner.Activities.SettingsActivity.SeekBarPreference
        android:defaultValue="@integer/pref_smart_charging_time_before_default"
        android:dependency="@string/pref_smart_charging_enabled"
        android:key="@string/pref_smart_charging_time"
        android:title="Minuten vorher:"
        app:slider_max="@integer/pref_smart_charging_time_before_max"
        app:slider_min="@integer/pref_smart_charging_time_before_min"
        app:unit=" min" />
    <com.laudien.p1xelfehler.batterywarner.Activities.SettingsActivity.SeekBarPreference
        android:defaultValue="@integer/pref_smart_charging_limit_default"
        android:dependency="@string/pref_smart_charging_enabled"
        android:key="@string/pref_smart_charging_limit"
        android:title="Limit:"
        app:slider_max="@integer/pref_smart_charging_limit_max"
        app:slider_min="@integer/pref_smart_charging_limit_min"
        app:unit="%" />
    <com.laudien.p1xelfehler.batterywarner.Activities.SmartChargingActivity.TimePickerPreference
        android:dependency="@string/pref_smart_charging_enabled"
        android:title="Zeit" />

</PreferenceScreen>